Fixed spacing under navbar

--- a/frontend/src/styles/utils/decorations.scss
+++ b/frontend/src/styles/utils/decorations.scss
@@ -117,10 +117,11 @@ a {
 
 // Navbar
 .navbar {
+  box-sizing: border-box;
   position: fixed;
   line-height: 60px;
   width: 100%;
-  border: 1px solid black;
+  outline: 1px solid black;
 
   ul {
     float: right;
