--- a/frontend/src/styles/utils/spacing.scss
+++ b/frontend/src/styles/utils/spacing.scss
@@ -9,7 +9,7 @@ $spacing-m:   24px;
 $spacing-l:   32px;
 $spacing-xl:  40px;
 $spacing-xxl: 48px;
-$spacing-xxxl: 80px;
+$spacing-xxxl: 60px;
 
 
 // todo - more classes, replace 1 with variables
